# wordflash

./: .gitignore  Makefile  README.md  pyproject.toml
data/: kids_learning.yaml  sample_quiz.yaml  sample_words.yaml  test_enhanced_vocab.yaml
data/categories/: animals.yaml  birds.yaml  body_parts.yaml  capitals_top_20_economy_countries.yaml  famous_figures.yaml  fish.yaml  flags_50_countries.yaml  flags_top_20_economy_countries.yaml  flags_top_50_economy_countries.yaml  general_knowledge_for_kids.yaml  geography.yaml  geography_top_20_economy_countries.yaml  geography_top_50_economy_countries.yaml  health.yaml  history.yaml  indian_history.yaml  plants.yaml  political_science.yaml  science_basics.yaml  solar_system_and_planets.yaml  sports.yaml  technology.yaml  world_leaders.yaml
src/wordflash/: __init__.py  analyze_vocabulary.py  anki_generator.py  audio_service.py  database_manager.py  flashcard_generator.py  image_service.py  main.py  quiz_flashcard_generator.py  quiz_loader.py  word_loader.py
